// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventHeader /> should render correctly 1`] = `
<Styled(styled.div)>
  <Flex
    align="center"
  >
    <Styled(Styled(styled.button))
      minWidth="60px"
      padding="0"
      textAlign="left"
    >
      <Icon
        color="#0A169A"
        name="arrow-right"
        size={48}
      />
    </Styled(Styled(styled.button))>
    <Breadcrumbs
      crumbs={
        Array [
          Object {
            "path": "/season",
            "title": "Season Dashboard",
          },
          Object {
            "path": "/event/1",
            "title": "Some Event",
          },
        ]
      }
    />
  </Flex>
  <styled.div
    height="1.5rem"
  />
  <Flex
    align="flex-start"
    justify="space-between"
  >
    <FlexItem
      flex="1"
      margin="0 20px 0 0"
    >
      <Styled(Styled(styled.h1))>
        Some Event
      </Styled(Styled(styled.h1))>
      <Styled(Styled(styled.h4))>
        Monday, June 18th, 2018 @ 10:47 AM CT
      </Styled(Styled(styled.h4))>
    </FlexItem>
    <Flex
      justify="flex-end"
    >
      <FlexItem
        flex="0 0 auto"
        margin="0 25px"
      >
        <Styled(styled.p)
          size="16"
          textAlign="right"
        >
          Inventory
        </Styled(styled.p)>
        <Styled(styled.p)
          size="22"
          textAlign="right"
          weight="heavy"
        >
          -- / --
        </Styled(styled.p)>
        <Styled(styled.p)
          color="#0A169A"
          size="12"
          textAlign="right"
        >
          Unsold / Sold
        </Styled(styled.p)>
      </FlexItem>
    </Flex>
    <FlexItem
      flex="0 0 auto"
      margin="0 25px"
    >
      <Styled(styled.p)
        size="16"
        textAlign="right"
      >
        Revenue
      </Styled(styled.p)>
      <Styled(styled.p)
        size="22"
        textAlign="right"
        weight="heavy"
      >
        $739,472
      </Styled(styled.p)>
      <Styled(styled.p)
        color="#0A169A"
        size="12"
        textAlign="right"
      >
        as of date
      </Styled(styled.p)>
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;

exports[`<EventHeader /> should render correctly when on the location route 1`] = `
<Styled(styled.div)>
  <Flex
    align="center"
  >
    <Styled(Styled(styled.button))
      minWidth="60px"
      padding="0"
      textAlign="left"
    >
      <Icon
        color="#0A169A"
        name="arrow-right"
        size={48}
      />
    </Styled(Styled(styled.button))>
    <Breadcrumbs
      crumbs={
        Array [
          Object {
            "path": "/season",
            "title": "Season Dashboard",
          },
          Object {
            "path": "/event/1",
            "title": "Some Event",
          },
          Object {
            "path": "/event/1/inventory",
            "title": "Inventory",
          },
        ]
      }
    />
  </Flex>
  <styled.div
    height="1.5rem"
  />
  <Flex
    align="flex-start"
    justify="space-between"
  >
    <FlexItem
      flex="1"
      margin="0 20px 0 0"
    >
      <Styled(Styled(styled.h1))>
        Some Event
      </Styled(Styled(styled.h1))>
      <Styled(Styled(styled.h4))>
        Monday, June 18th, 2018 @ 10:47 AM CT
      </Styled(Styled(styled.h4))>
    </FlexItem>
    <Flex
      justify="flex-end"
    >
      <FlexItem
        flex="0 0 auto"
        margin="0 25px"
      >
        <Styled(styled.p)
          size="16"
          textAlign="right"
        >
          Inventory
        </Styled(styled.p)>
        <Styled(styled.p)
          size="22"
          textAlign="right"
          weight="heavy"
        >
          -- / --
        </Styled(styled.p)>
        <Styled(styled.p)
          color="#0A169A"
          size="12"
          textAlign="right"
        >
          Unsold / Sold
        </Styled(styled.p)>
      </FlexItem>
    </Flex>
    <FlexItem
      flex="0 0 auto"
      margin="0 25px"
    >
      <Styled(styled.p)
        size="16"
        textAlign="right"
      >
        Revenue
      </Styled(styled.p)>
      <Styled(styled.p)
        size="22"
        textAlign="right"
        weight="heavy"
      >
        $739,472
      </Styled(styled.p)>
      <Styled(styled.p)
        color="#0A169A"
        size="12"
        textAlign="right"
      >
        as of date
      </Styled(styled.p)>
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;
